# HWSW_Codesign_ECC

./: .gitignore  README.md
_report/: HW_SW_Co-Design_Final.pptx  ecc_fsm.drawio
src/: CMakeLists.txt  ecc.cpp  ecc.py  genmult.py  multiplier.c  multiplier.cpp  tmp.cpp
src/8051/: 8051_iss.cpp  CMakeLists.txt  ecc.cpp  ecc.h  io_port.c  io_port.t  top.cpp  top.h
src/pattern/: pattern_163.txt  pattern_8.txt
src/sw_sim/: ecc.0  ecc.cpp  simulation.py
